--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     <h1>Ястребы и Голуби</h1>
     <div class="moduleWindow">
       <label for="">Количество голубей</label>
-      <input type="number" id="hawk">
+      <input type="range" id="hawk">
       <label for="">Количество ястребов</label>
-      <input type="number" id="pige">
+      <input type="range" id="pige">
       <label for="">Скорость птиц</label>
-      <input type="number">
+      <input type="range" id="speed">
       <button id="save">Сохранить</button>
     </div>
+   
     <div class="container">
-      <button>Старт</button>
+      <button id="start">Старт</button>
       <button id="modal">Настройки</button>
     </div>
   </div>
-  <div class="pigeon"></div>
-  <div class="hawk"></div>
+<!--   <div class="pigeon"></div>
+  <div class="hawk"></div> -->
   <script src="script.js"></script>
 </body>
 </html>
