--- a/index.html
+++ b/index.html
@@ -1,123 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Голуби и ястребы</title>
-  </head>
-  <body>
-    <div class="btn-group-top">
-      <div class="containers">
-        <h1>Ястребы и голуби </h1>
-        <div class="container">
-          
-          <button
-            id="setting"
-            data-bs-toggle="modal"
-            data-bs-target="#settingsModal"
-          >
-            Настройки
-          </button>
-          <button  id="launchBtn">Запустить</button>
-        </div>
-      </div>
-    </div>
+<html lang="ru">
 
-    <!-- Модальное окно -->
-    <div
-      class="modal fade"
-      id="settingsModal"
-      tabindex="-1"
-      aria-labelledby="settingsModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <form id="settingsForm">
-            <div class="modal-header">
-              <h5 class="modal-title" id="settingsModalLabel">
-                Настройки птиц
-              </h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Закрыть"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <div class="mb-3">
-                <label for="doveCount" class="form-label"
-                  >Количество голубей</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="doveCount"
-                  min="0"
-                  max="100"
-                  value="5"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="hawkCount" class="form-label"
-                  >Количество ястребов</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="hawkCount"
-                  min="0"
-                  max="100"
-                  value="5"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="minSpeed" class="form-label"
-                  >Минимальная скорость</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="minSpeed"
-                  step="0.1"
-                  min="0.1"
-                  value="2"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="maxSpeed" class="form-label"
-                  >Максимальная скорость</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="maxSpeed"
-                  step="0.1"
-                  min="0.1"
-                  value="4"
-                  required
-                />
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="submit" class="save">Сохранить</button>
-            </div>
-          </form>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Симуляция ястребов и голубей</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <!-- Панель управления -->
+  <div id="controls">
+    <button id="startBtn">Старт</button>
+    <button id="settingsBtn">Настройки</button>
+  </div>
+
+  <!-- Полотно для симуляции -->
+  <canvas id="canvas"></canvas>
+
+  <!-- Модальное окно настроек -->
+  <div id="settingsModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Настройки</h2>
+      <label>Количество ястребов:</label><br>
+      <input type="range" id="hawkCount" value="5" min="0"><br>
+      <label>Количество голубей:</label><br>
+      <input type="range" id="doveCount" value="10" min="0"><br>
+      <label>Скорость (пикс/кадр):</label><br>
+      <input type="range" id="speed" value="2" min="1" step="0.1"><br>
+      <button id="applySettings">Применить</button>
     </div>
-    <!--   <div class="pigeon"></div>
-  <div class="hawk"></div> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
 </html>
