--- a/index.html
+++ b/index.html
@@ -1,41 +1,13 @@
-<!DOCTYPE html>
-<html lang="ru">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Симуляция ястребов и голубей</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <!-- Панель управления -->
-  <div id="controls">
-    <button id="startBtn" class="btn btn-primary">Старт</button>
-    <button id="settingsBtn" class="btn btn-danger">Настройки</button>
-  </div>
-
-  <!-- Полотно для симуляции -->
-  <canvas id="canvas"></canvas>
-
-  <!-- Модальное окно настроек -->
-  <div id="settingsModal" class="modal">
-    <div class="modal-content">
-
-      <span class="close"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16"><path d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l3.22 3.22a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-3.22 3.22a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z"></path></svg></span>
-      <h2>Настройки</h2>
-      <label>Количество ястребов:</label><br>
-      <input type="range" id="hawkCount" class="form-control" value="5" min="0"><br>
-      <label>Количество голубей:</label><br>
-      <input type="range" id="doveCount" class="form-control" value="10" min="0"><br>
-      <label>Скорость (пикс/кадр):</label><br>
-      <input type="range" id="speed" class="form-control" value="2" min="1" step="0.1"><br>
-      <button id="applySettings" class="btn btn-primary">Применить</button>
-    </div>
-  </div>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
-</body>
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
